--- a/ar.html
+++ b/ar.html
@@ -24,14 +24,14 @@
                 id="animated-marker"
                 type="pattern"
                 preset="custom"
-                url="../assets/marker.patt"
+                url="assets/marker.patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
                 id="markerA"
             >
                 <a-image
-                    src="../assets/asset.jpeg"
+                    src="assets/asset.jpeg"
                     scale="5 5 5 "
                     class="clickable"
                     rotation="-90 0 0"
@@ -42,14 +42,14 @@
             id="animated-marker"
             type="pattern"
             preset="custom"
-            url="../assets/405.patt"
+            url="assets/405.patt"
             raycaster="objects: .clickable"
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;"
             id="markerA"
         >
             <a-image
-                src="../assets/405.png"
+                src="assets/405.png"
                 scale="5 5 5 "
                 class="clickable"
                 rotation="-90 0 0"
