--- a/ar.html
+++ b/ar.html
@@ -46,7 +46,7 @@
             id="marker1"
         >
             <a-image
-                src="../assets/405.png"
+                src="../assets/405.jpeg"
                 scale="5 5 5 "
                 class="clickable"
                 rotation="-90 0 0"
