--- a/ar.html
+++ b/ar.html
@@ -39,7 +39,7 @@
             id="animated-marker1"
             type="pattern"
             preset="custom"
-            url="../assets/esperanza.patt"
+            url="assets/esperanza.patt"
             raycaster="objects: .clickable"
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;"
@@ -47,7 +47,7 @@
         >
             <a-image
                 src="../assets/405.jpeg"
-                scale="5 5 5 "
+                scale="1 1 1 "
                 class="clickable"
                 rotation="-90 0 0"
                 gesture-handler
