--- a/ar.html
+++ b/ar.html
@@ -39,14 +39,14 @@
             id="animated-marker1"
             type="pattern"
             preset="custom"
-            url="../assets/405.patt"
+            url="assets/405.patt"
             raycaster="objects: .clickable"
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;"
             id="marker1"
         >
             <a-image
-                src="../assets/405.jpeg"
+                src="assets/405.jpeg"
                 scale="5 5 5 "
                 class="clickable"
                 rotation="-90 0 0"
