--- a/ar.html
+++ b/ar.html
@@ -21,7 +21,7 @@
                 id="animated-marker"
                 type="pattern"
                 preset="custom"
-                url="assets/esperanza.patt"
+                url="assets/prueba.patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
