--- a/ar.html
+++ b/ar.html
@@ -39,7 +39,7 @@
             id="animated-marker1"
             type="pattern"
             preset="custom"
-            url="assets/asset.patt"
+            url="assets/405.patt"
             raycaster="objects: .clickable"
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;"
