--- a/ar.html
+++ b/ar.html
@@ -56,6 +56,13 @@
         
             <a-entity camera></a-entity>
         </a-scene>
+        <script>
+    document.getElementById('regresarMapa').addEventListener('click', function() {
+      window.location.href = 'index.html';
+    });
+
+    
+  </script>
     </body>
 </html>
 
