--- a/ar.html
+++ b/ar.html
@@ -59,7 +59,7 @@
             id="animated-marker2"
             type="pattern"
             preset="custom"
-            url="assets/esperanza.patt"
+            url="assets/marker.patt"
             raycaster="objects: .clickable"
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;"
