--- a/ar.html
+++ b/ar.html
@@ -84,7 +84,7 @@
                     <a-entity
                         look-at="[gps-camera]"
                         animation-mixer="loop: repeat"
-                        gltf-model="#animated-asset"
+                        gltf-model="#animated-asset1"
                         scale="0.900 0.900 0.900"
                         gps-entity-place="latitude:7.884445; longitude: -72.501092;"
                     ></a-entity>
