--- a/ar.html
+++ b/ar.html
@@ -22,14 +22,14 @@
                 id="animated-marker"
                 type="pattern"
                 preset="custom"
-                url="assets/prueba.patt"
+                url="assets/201.patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
                 id="markerA"
             >
                 <a-image
-                    src="assets/asset.jpeg"
+                    src="assets/201.jpeg"
                     scale="1 1 1"
                     class="clickable"
                     rotation="-90 0 0"
