--- a/ar.html
+++ b/ar.html
@@ -29,7 +29,7 @@
                 id="markerA"
             >
                 <a-image
-                    src="img/201.jpeg"
+                    src="assets/201.jpeg"
                     scale="1 1 1"
                     class="clickable"
                     rotation="-90 0 0"
