--- a/ar.html
+++ b/ar.html
@@ -48,7 +48,7 @@
             id="marker1"
         >
             <a-image
-                src="assets/bañosm.png"
+                src="assets/bañosm.jpg"
                 scale="5 5 5 "
                 class="clickable"
                 rotation="-90 0 0"
