--- a/ar.html
+++ b/ar.html
@@ -22,7 +22,7 @@
                 id="animated-marker"
                 type="pattern"
                 preset="custom"
-                url="img/202.patt"
+                url="assets/202.patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
@@ -41,7 +41,7 @@
             id="animated-marker1"
             type="pattern"
             preset="custom"
-            url="assets/bañosm.patt"
+            url="assets/500.patt"
             raycaster="objects: .clickable"
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;"
