--- a/ar.html
+++ b/ar.html
@@ -45,7 +45,7 @@
             raycaster="objects: .clickable"
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;"
-            id="marker1"
+            id="markerb"
         >
             <a-image
                 src="assets/bañosm.jpeg"
@@ -56,14 +56,14 @@
             ></a-image>
         </a-marker>
          <a-marker
-            id="animated-marker3"
+            id="animated-marker2"
             type="pattern"
             preset="custom"
             url="assets/marker.patt"
             raycaster="objects: .clickable"
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;"
-            id="marker2"
+            id="markerc"
         >
             <a-image
                 src="assets/bañosm.jpeg"
@@ -74,17 +74,17 @@
             ></a-image>
         </a-marker>
             <a-marker
-            id="animated-marker4"
+            id="animated-marker3"
             type="pattern"
             preset="custom"
-            url="assets/esperanza.patt"
+            url="assets/ambiente202.patt"
             raycaster="objects: .clickable"
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;"
-            id="marker2"
+            id="markerd"
         >
             <a-image
-                src="assets/am202.jpeg"
+                src="assets/amb202.jpeg"
                 scale="5 5 5 "
                 class="clickable"
                 rotation="-90 0 0"
