--- a/ar.html
+++ b/ar.html
@@ -110,6 +110,25 @@
                 gesture-handler
             ></a-image>
         </a-marker>
+
+            <a-marker
+            id="animated-marker3"
+            type="pattern"
+            preset="custom"
+            url="assets/cor.patt"
+            raycaster="objects: .clickable"
+            emitevents="true"
+            cursor="fuse: false; rayOrigin: mouse;"
+            id="markerd"
+        >
+            <a-image
+                src="assets/cor.jpeg"
+                scale="5 5 5 "
+                class="clickable"
+                rotation="-90 0 0"
+                gesture-handler
+            ></a-image>
+        </a-marker>
           <a-entity camera></a-entity>  
         </a-scene>
         
