--- a/ar.html
+++ b/ar.html
@@ -96,7 +96,7 @@
             id="animated-marker3"
             type="pattern"
             preset="custom"
-            url="assets/tecnico.patt"
+            url="assets/sp.patt"
             raycaster="objects: .clickable"
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;"
